QE-60: Add javadoc