@@ -15,24 +15,77 @@ import java.util.Date;
 import java.util.List;
 import java.util.Locale;
 
+/**
+ * Utility class for resampling OHLCV (Open, High, Low, Close, Volume) financial data to different
+ * time intervals. This implementation specifically handles resampling to 5-minute intervals.
+ */
 public class Resample {
+    /** Conversion factor from nanoseconds to milliseconds. */
+    private static final int NANOSECONDS_TO_MILLISECONDS = 1_000_000;
 
-    private static class OHLCV {
-        long timestamp; // in milliseconds
-        double open;
-        double high;
-        double low;
-        double close;
-        int volume;
+    /** Duration of 5 minutes in milliseconds. */
+    private static final int FIVE_MINUTES_MS = 5 * 60 * 1000;
 
-        public OHLCV(
-                long timestamp, double open, double high, double low, double close, int volume) {
+    /** Number of required columns in the input CSV (0-8 inclusive). */
+    private static final int CSV_REQUIRED_COLUMNS = 9;
+
+    /** Represents a single OHLCV (Open, High, Low, Close, Volume) data point. */
+    private static final class OHLCV {
+        /** Timestamp in milliseconds since epoch. */
+        private final long timestamp;
+
+        /** Opening price. */
+        private final double open;
+
+        /** Highest price in the period. */
+        private final double high;
+
+        /** Lowest price in the period. */
+        private final double low;
+
+        /** Closing price. */
+        private final double close;
+
+        /** Trading volume. */
+        private final int volume;
+
+        OHLCV(
+                final long timestamp,
+                final double open,
+                final double high,
+                final double low,
+                final double close,
+                final int volume) {
             this.timestamp = timestamp;
             this.open = open;
             this.high = high;
             this.low = low;
             this.close = close;
             this.volume = volume;
+        }
+
+        public long getTimestamp() {
+            return timestamp;
+        }
+
+        public double getOpen() {
+            return open;
+        }
+
+        public double getHigh() {
+            return high;
+        }
+
+        public double getLow() {
+            return low;
+        }
+
+        public double getClose() {
+            return close;
+        }
+
+        public int getVolume() {
+            return volume;
         }
 
         @Override
@@ -51,13 +104,30 @@ public class Resample {
         }
     }
 
-    public static void resampleTo5Min(String inputFile, String outputFile) throws IOException {
+    /**
+     * Resamples OHLCV data from an input file to 5-minute intervals and writes to an output file.
+     *
+     * @param inputFile Path to the input CSV file containing OHLCV data
+     * @param outputFile Path where the resampled data will be written
+     * @throws IOException if there's an error reading or writing the files
+     * @throws IllegalArgumentException if input parameters are invalid
+     */
+    public static void resampleTo5Min(final String inputFile, final String outputFile)
+            throws IOException {
         List<OHLCV> candles = readInputFile(inputFile);
         List<OHLCV> resampledCandles = resampleCandles(candles);
         writeOutputFile(outputFile, resampledCandles);
     }
 
-    private static List<OHLCV> readInputFile(String inputFile) throws IOException {
+    /**
+     * Reads OHLCV data from a CSV file.
+     *
+     * @param inputFile Path to the input CSV file
+     * @return List of OHLCV objects parsed from the input file
+     * @throws IOException if there's an error reading the file
+     * @throws IllegalArgumentException if the input file has an invalid format
+     */
+    private static List<OHLCV> readInputFile(final String inputFile) throws IOException {
         List<OHLCV> candles = new ArrayList<>();
 
         try (BufferedReader br =
@@ -67,16 +137,23 @@ public class Resample {
             String line;
             while ((line = br.readLine()) != null) {
                 String[] parts = line.split(",");
-                if (parts.length < 10) continue;
+                if (parts.length <= CSV_REQUIRED_COLUMNS) {
+                    continue;
+                }
 
                 try {
-                    long timestamp =
-                            Long.parseLong(parts[0].trim()) / 1_000_000; // Convert to milliseconds
-                    double open = Double.parseDouble(parts[4].trim());
-                    double high = Double.parseDouble(parts[5].trim());
-                    double low = Double.parseDouble(parts[6].trim());
-                    double close = Double.parseDouble(parts[7].trim());
-                    int volume = Integer.parseInt(parts[8].trim());
+                    long timestamp = Long.parseLong(parts[0].trim()) / NANOSECONDS_TO_MILLISECONDS;
+                    final int openIdx = 4;
+                    final int highIdx = 5;
+                    final int lowIdx = 6;
+                    final int closeIdx = 7;
+                    final int volumeIdx = 8;
+
+                    double open = Double.parseDouble(parts[openIdx].trim());
+                    double high = Double.parseDouble(parts[highIdx].trim());
+                    double low = Double.parseDouble(parts[lowIdx].trim());
+                    double close = Double.parseDouble(parts[closeIdx].trim());
+                    int volume = Integer.parseInt(parts[volumeIdx].trim());
 
                     candles.add(new OHLCV(timestamp, open, high, low, close, volume));
                 } catch (NumberFormatException e) {
@@ -86,32 +163,36 @@ public class Resample {
         }
 
         // Sort by timestamp to ensure data is in order
-        candles.sort(Comparator.comparingLong(c -> c.timestamp));
+        candles.sort(Comparator.comparingLong(OHLCV::getTimestamp));
         return candles;
     }
 
-    private static List<OHLCV> resampleCandles(List<OHLCV> candles) {
+    /**
+     * Resamples a list of OHLCV candles to 5-minute intervals.
+     *
+     * @param candles List of input OHLCV candles to be resampled
+     * @return List of resampled OHLCV candles with 5-minute intervals
+     * @throws IllegalArgumentException if the input list is empty
+     */
+    private static List<OHLCV> resampleCandles(final List<OHLCV> candles) {
         if (candles.isEmpty()) {
             return new ArrayList<>();
         }
 
         List<OHLCV> resampled = new ArrayList<>();
-
-        // Group by 5-minute intervals
-        long intervalMs = 5 * 60 * 1000; // 5 minutes in milliseconds
-        long currentInterval = (candles.get(0).timestamp / intervalMs) * intervalMs;
-
+        long currentInterval =
+                (candles.getFirst().getTimestamp() / FIVE_MINUTES_MS) * FIVE_MINUTES_MS;
         List<OHLCV> currentGroup = new ArrayList<>();
 
         for (OHLCV candle : candles) {
-            if (candle.timestamp >= currentInterval + intervalMs) {
+            if (candle.getTimestamp() >= currentInterval + FIVE_MINUTES_MS) {
                 // Process the completed group
                 if (!currentGroup.isEmpty()) {
                     resampled.add(aggregateCandles(currentGroup));
                     currentGroup.clear();
                 }
-                // Move to next interval
-                currentInterval = (candle.timestamp / intervalMs) * intervalMs;
+                // Move to the next interval
+                currentInterval = (candle.getTimestamp() / FIVE_MINUTES_MS) * FIVE_MINUTES_MS;
             }
             currentGroup.add(candle);
         }
@@ -124,19 +205,26 @@ public class Resample {
         return resampled;
     }
 
-    private static OHLCV aggregateCandles(List<OHLCV> candles) {
+    /**
+     * Aggregates multiple OHLCV candles into a single candle.
+     *
+     * @param candles List of OHLCV candles to aggregate
+     * @return A single OHLCV candle representing the aggregated data
+     * @throws IllegalArgumentException if the input list is empty
+     */
+    private static OHLCV aggregateCandles(final List<OHLCV> candles) {
         if (candles.isEmpty()) {
             throw new IllegalArgumentException("Cannot aggregate empty candle list");
         }
 
-        double open = candles.get(0).open;
-        double high = candles.stream().mapToDouble(c -> c.high).max().orElse(0);
-        double low = candles.stream().mapToDouble(c -> c.low).min().orElse(0);
-        double close = candles.get(candles.size() - 1).close;
-        int volume = candles.stream().mapToInt(c -> c.volume).sum();
+        double open = candles.getFirst().getOpen();
+        double high = candles.stream().mapToDouble(OHLCV::getHigh).max().orElse(0);
+        double low = candles.stream().mapToDouble(OHLCV::getLow).min().orElse(0);
+        double close = candles.getLast().getClose();
+        int volume = candles.stream().mapToInt(OHLCV::getVolume).sum();
 
         return new OHLCV(
-                candles.get(0).timestamp, // Use the start time of the interval
+                candles.getFirst().getTimestamp(), // Use the start time of the interval
                 open,
                 high,
                 low,
@@ -144,7 +232,15 @@ public class Resample {
                 volume);
     }
 
-    private static void writeOutputFile(String outputFile, List<OHLCV> candles) throws IOException {
+    /**
+     * Writes a list of OHLCV candles to a CSV file.
+     *
+     * @param outputFile Path to the output CSV file
+     * @param candles List of OHLCV candles to write
+     * @throws IOException if there's an error writing to the file
+     */
+    private static void writeOutputFile(final String outputFile, final List<OHLCV> candles)
+            throws IOException {
         try (BufferedWriter writer =
                 new BufferedWriter(
                         new OutputStreamWriter(
@@ -159,7 +255,13 @@ public class Resample {
         }
     }
 
-    public static void main(String[] args) {
+    /**
+     * Main method for command-line execution.
+     *
+     * @param args Command line arguments: [input_file] [output_file]
+     * @throws IOException if there's an error processing the files
+     */
+    static void main(final String[] args) throws IOException {
         if (args.length != 2) {
             System.out.println(
                     "Usage: java -cp <classpath> com.quarteredge.core.util.Resample <input_file>"
@@ -167,16 +269,10 @@ public class Resample {
             System.exit(1);
         }
 
-        String inputFile = args[0];
-        String outputFile = args[1];
+        String inputFile = "";
+        String outputFile = "";
 
-        try {
-            resampleTo5Min(inputFile, outputFile);
-            System.out.println("Successfully resampled data to " + outputFile);
-        } catch (IOException e) {
-            System.err.println("Error processing files: " + e.getMessage());
-            e.printStackTrace();
-            System.exit(1);
-        }
+        resampleTo5Min(inputFile, outputFile);
+        System.out.println("Successfully resampled data to " + outputFile);
     }
 }
